sdk/lib/zxio/include/lib/zxio/zxio.h

// Shuts a given IO object down for reading, writing, or both.
//
// |options| can be any of:
//   ZXIO_SHUTDOWN_OPTIONS_READ - disables reading from this object
//   ZXIO_SHUTDOWN_OPTIONS_WRITE - disables writing to this object
//   ZXIO_SHUTDOWN_OPTIONS_READ | ZXIO_SHUTDOWN_OPTIONS_WRITE  - disables reading and
//     writing for this object.
ZXIO_EXPORT zx_status_t zxio_shutdown(zxio_t* io, zxio_shutdown_options_t options,
                                      int16_t* out_code);
// Directory

// Open a new zxio object relative to the given |directory| and initialize it
// into |storage|.
//
// This call blocks on the remote server.
//
// See fuchsia.io for the available |flags| and |mode|.
ZXIO_EXPORT zx_status_t zxio_open(zxio_t* directory, uint32_t flags, const char* path,
                                  size_t path_len, zxio_storage_t* storage);
// Open a new object relative to the given |directory|.
//
// The object's connection is represented as a |zx_handle_t|. The caller is
// responsible for creating the |zx_handle_t|, which must be a channel. This
// call does not block on the remote server.
//
// If the caller specifies the flag fuchsia.io.OPEN_FLAG_DESCRIBE then the
// connection can be wrapped in a zxio object by calling
// zxio_create_with_on_open().
//
// See fuchsia.io for the available |flags|.
ZXIO_EXPORT zx_status_t zxio_open_async(zxio_t* directory, uint32_t flags, const char* path,
                                        size_t path_len, zx_handle_t request);
// Remove a file relative to the given directory. |flags| has the same values
// and semantics as POSIX's unlinkat |flags| argument.
ZXIO_EXPORT zx_status_t zxio_unlink(zxio_t* directory, const char* name, size_t name_len,
                                    int flags);
// Attempts to rename |old_path| relative to |old_directory| to |new_path|
// relative to the directory represented by |new_directory_token|.
//
// |old_directory| and |new_directory_token| may be aliased.
ZXIO_EXPORT zx_status_t zxio_rename(zxio_t* old_directory, const char* old_path,
                                    size_t old_path_len, zx_handle_t new_directory_token,
                                    const char* new_path, size_t new_path_len);
// Attempts to link |src_path| relative to |src_directory| to |dst_path| relative to
// the directory represented by |dst_directory_token|.
//
// |src_directory| and |dst_directory_token| may be aliased.
ZXIO_EXPORT zx_status_t zxio_link(zxio_t* src_directory, const char* src_path, size_t src_path_len,
                                  zx_handle_t dst_directory_token, const char* dst_path,
                                  size_t dst_path_len);
// Directory iterator

// Initializes a |zxio_dirent_iterator_t| for the given |directory|.
//
// At most one |zxio_dirent_iterator_t| can be active for a given |directory|
// at a time. The lifetime of |directory| must be greater than that of |iterator|.
//
// The initialized iterator should be destroyed by calling
// |zxio_dirent_iterator_destroy| when no longer used.
ZXIO_EXPORT zx_status_t zxio_dirent_iterator_init(zxio_dirent_iterator_t* iterator,
                                                  zxio_t* directory);
// Read a |zxio_dirent_t| from the given |iterator| into |inout_entry|.
//
// |inout_entry->name| must be initialized to point to a buffer of at least
// ZXIO_MAX_FILENAME bytes. This function does not null terminate
// |inout_entry->name| - refer to the |zxio_dirent_t| documentation in types.h
// for more details.
//
// This function reads |zxio_directory_entry_t| from the server in chunks, but this
// function returns the entries one at a time. When this function crosses into
// a new chunk, the function will block on the remote server to retrieve the
// next chunk.
//
// When there are no more directory entries to enumerate, this function will
// return |ZX_ERR_NOT_FOUND|.
//
// |iterator| must have been previously initialized via
// |zxio_dirent_iterator_init|.
ZXIO_EXPORT zx_status_t zxio_dirent_iterator_next(zxio_dirent_iterator_t* iterator,
                                                  zxio_dirent_t* inout_entry);
// Rewinds a |zxio_dirent_iterator_t| back to the first entry.
ZXIO_EXPORT zx_status_t zxio_dirent_iterator_rewind(zxio_dirent_iterator_t* iterator);
// Destroys a |zxio_dirent_iterator_t|, freeing associated resources.
//
// After destruction, another |zxio_dirent_iterator_init| call might be made on
// the corresponding directory.
ZXIO_EXPORT void zxio_dirent_iterator_destroy(zxio_dirent_iterator_t* iterator);
// Terminals

// Return in |tty| whether or not |io| represents a TTY object (should
// line buffer for stdio, etc).
ZXIO_EXPORT zx_status_t zxio_isatty(zxio_t* io, bool* tty);
// Gets the window size in characters for the tty in |io|.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| does not support setting the window size.
ZXIO_EXPORT zx_status_t zxio_get_window_size(zxio_t* io, uint32_t* width, uint32_t* height);
// Sets the window size in characters for the tty in |io|.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| does not support setting the window size.
ZXIO_EXPORT zx_status_t zxio_set_window_size(zxio_t* io, uint32_t width, uint32_t height);
// Executes the given specific ioctl.
ZXIO_EXPORT zx_status_t zxio_ioctl(zxio_t* io, int request, int16_t* out_code, va_list va);
// Returns the target of the symbolic link. The returned target will remain valid for as long as the
// io object does.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| isn't a symbolic link.
ZXIO_EXPORT zx_status_t zxio_read_link(zxio_t* io, const uint8_t** out_target,
                                       size_t* out_target_len);
// Creates a symbolic link.
//
// See fuchsia.io's CreateSymlink method. `storage` is optional storage which, if specified, will be
// initialized with a connection to the successfully created symlink.
ZXIO_EXPORT zx_status_t zxio_create_symlink(zxio_t* io, const char* name, size_t name_len,
                                            const uint8_t* target, size_t target_len,
                                            zxio_storage_t* storage);
// Takes a callback, to which all the extended attribute names associated with this node are passed
// one by one. This function calls the callback for all the names, and then returns.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| doesn't support extended attributes. The callback will not
// be called in this case.
ZXIO_EXPORT zx_status_t zxio_xattr_list(zxio_t* io,
                                        void (*callback)(void* context, const uint8_t* name,
                                                         size_t name_len),
                                        void* context);
// Returns the value for the given extended attribute |name|. The value is passed to the provided
// |callback|, along with any |context| passed into the function.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| doesn't support extended attributes. The callback will not
// be called in this case.
ZXIO_EXPORT zx_status_t zxio_xattr_get(zxio_t* io, const uint8_t* name, size_t name_len,
                                       zx_status_t (*callback)(void* context,
                                                               zxio_xattr_data_t data),
                                       void* context);
// Sets the |value| for the given extended attribute |name|.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| doesn't support extended attributes.
ZXIO_EXPORT zx_status_t zxio_xattr_set(zxio_t* io, const uint8_t* name, size_t name_len,
                                       const uint8_t* value, size_t value_len,
                                       zxio_xattr_set_mode_t mode);
// Removes the value for the given extended attribute |name|.
//
// Returns ZX_ERR_NOT_SUPPORTED if |io| doesn't support extended attributes.
ZXIO_EXPORT zx_status_t zxio_xattr_remove(zxio_t* io, const uint8_t* name, size_t name_len);